k8s/kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: resident-management
  labels:
    app: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
      - name: kube-state-metrics
        image: k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.8.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 190Mi
          limits:
            cpu: 100m
            memory: 190Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: resident-management
  labels:
    app: kube-state-metrics
spec:
  selector:
    app: kube-state-metrics
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
